--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,64 @@
+.navbar {
+  padding: 20px;
+  display: flex;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+}
 
+.navbar-logo {
+  width: 100px;
+}
+
+.hero {
+  padding: 20px 40px;
+}
+
+.hero-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-img {
+  width: 600px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+}
+
+.card-image {
+  border-radius: 10px;
+  width: 250px;
+}
+
+.card-star {
+  width: 20px;
+}
+
+.card p {
+  margin: 0;
+}
+
+.card span {
+  font-weight: bold;
+}
+
+.card-rating {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.dot {
+  width: 5px;
+  height: 5px;
+  background-color: #d3d2d7;
+  border-radius: 50%;
+}
+
+.card-gray-p {
+  color: #d3d2d7;
+}
